<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>dev.anhcraft</groupId>
        <artifactId>oreprocessor</artifactId>
        <version>1.2.0</version>
    </parent>

    <artifactId>oreprocessor-plugin</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>OreProcessor-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>dev.anhcraft.palette</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.palette</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>dev.anhcraft.config</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.config</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>dev.anhcraft.jvmkit</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.jvmkit</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.commands</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.acf</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>co.aikar.locales</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.locales</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.vlkan.rfos</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.rfos</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.intellij</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.intellij</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.jetbrains</pattern>
                                    <shadedPattern>dev.anhcraft.oreprocessor.lib.jetbrains</shadedPattern>
                                </relocation>
                            </relocations>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>dev.anhcraft</groupId>
            <artifactId>oreprocessor-api</artifactId>
            <version>${project.parent.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.anhcraft</groupId>
            <artifactId>palette</artifactId>
            <version>v1.0.9</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.anhcraft.config</groupId>
            <artifactId>config.bukkit</artifactId>
            <version>v1.2.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.anhcraft</groupId>
            <artifactId>JvmKit</artifactId>
            <version>v1.1.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-paper</artifactId>
            <version>0.5.1-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.vlkan.rfos</groupId>
            <artifactId>rotating-fos</artifactId>
            <version>0.9.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <!-- Fix logging error caused by rfos -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.9</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.Archy-X</groupId>
            <artifactId>AureliumSkills</artifactId>
            <version>Beta1.3.19</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>dev.aurelium</groupId>
            <artifactId>auraskills-api-bukkit</artifactId>
            <version>2.0.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.brcdev-minecraft</groupId>
            <artifactId>shopgui-api</artifactId>
            <version>3.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Gypopo</groupId>
            <artifactId>EconomyShopGUI-API</artifactId>
            <version>1.7.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.willfp</groupId>
            <artifactId>eco</artifactId>
            <version>6.73.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ae</groupId>
            <artifactId>ae</artifactId>
            <version>9.8.1</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/AdvancedEnchantments-9.9.19.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>io.th0rgal</groupId>
            <artifactId>oraxen</artifactId>
            <version>1.173.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/lib/oraxen.jar</systemPath>
        </dependency>
    </dependencies>
</project>